# solana-daovote

./: .gitignore  package.json  prettier.config.js  readme.md
dao-vote/: README.md  package-lock.json  package.json
dao-vote/src/client/: cast.ts  create.ts  main.ts  testGPA.ts  utils.ts
dao-vote/src/rust/: Cargo.toml
dao-vote/src/rust/src/: .processor.rs.swp  entrypoint.rs  error.rs  processor.rs
web/: next.config.js  package.json
web/components/Footer/: index.module.css  index.tsx
web/components/Header/: index.module.css  index.tsx
web/components/Layout/: index.tsx
web/components/NFTCards/: index.tsx
web/components/NFTSelection/: index.tsx
web/components/VoteHistory/: index.tsx
web/constants/: addresses.ts
web/pages/: _app.tsx  index.tsx
web/pages/api/: index.js
web/pages/proposal/: [proposalId].tsx
web/services/NFT/: index.ts
web/styles/: Home.module.css  globals.css  globals.scss
web/types/: index.ts
web/utils/: index.ts
